src/test/deca/context/invalid/created/Objet/Passe_1/NotAClassExtends.deca
// Description:
//    teste la declaration d'une classe en tant qu'extension d'un type qui n'est pas une classe
// Resultats:
//    NotAClassExtends.deca:6:0: Error: The parent is not a class

class A extends void {

}

{

}